# content-planner-agent

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  CURRENT_TASK.md  FUTURE_PLANS.md  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt  test_api.py
.cursor/rules/: agent_architecture.mdc  code_style.mdc  langgraph_best_practices.mdc  test_organization.mdc
app/api/: agent.py
app/utils/: db.py
content_planner_agent/: agent.py
content_planner_agent/api/: app.py  routes.py
content_planner_agent/config/: app_info.py  settings.py
content_planner_agent/db/: database.py
content_planner_agent/models/: llm.py
content_planner_agent/nodes/: app_info_node.py  guidelines_node.py  post_examples_node.py  process_node.py  router_node.py
content_planner_agent/state/: state.py
content_planner_agent/utils/: extractors.py  logging_config.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Chat.jsx
tests/: debug_test.py  test_agent.py  test_agent_simple.py
